# pigeon

./: .gitignore  Dockerfile  docker-compose.yml  pigeon.py  pixi.toml  pyproject.toml
scripts/: make_giab_db.py
src/: pigeon.py
src/pigeon/: __init__.py  cramstats_dir.py  flowcell_dir.py  store.py
superset/: Dockerfile  README.md  startup.sh  superset_config.py
test/integration/: test_giab_flowcells.py
