[project]
authors = [{name = "Stephen Pascoe", email = "Stephen.Pascoe@nanoporetech.com"}]
dependencies = ["pyarrow>=14.0.1,<15", "apache-superset>=4.0.2,<5", "duckdb-engine>=0.13.2,<0.14"]
description = "Add a short description here"
name = "pigeon"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.project]
channels = ["conda-forge", "bioconda"]
platforms = ["osx-arm64", "linux-64"]

[tool.pixi.dependencies]
python = "<3.12"
ipython = ">=8.27.0,<9"
pysam = ">=0.22.1,<0.23"
jupyterlab = ">=4.2.5,<5"
boto3 = ">=1.35.24,<2"
pandas = "<2.1"
numpy = "==1.23.5"

[project.optional-dependencies]
test = ["pytest", "black"]

[tool.pixi.pypi-dependencies]
duckdb = ">=1.1.0, <2"
pigeon = { path = ".", editable = true }

[tool.pixi.environments]
test = {features=["test"], solve-group="default"}

[tool.pixi.tasks]
docker_build = "docker build -t pigeon ."
